--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,6 +1,6 @@
 {
   "tasks": {
-    "dev": "deno run --watch main.ts"
+    "dev": "deno run --allow-net --watch main.ts"
   },
   "compilerOptions": {
     "lib": ["deno.unstable", "ESNext", "dom"],
